javascript sdk for batch management 2021-01-01

--- a/sdk/batch/arm-batch/package.json
+++ b/sdk/batch/arm-batch/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@azure/ms-rest-azure-js": "^2.0.1",
     "@azure/ms-rest-js": "^2.0.4",
+    "adal-node": "^0.2.1",
     "tslib": "^2.0.0"
   },
   "keywords": [
