--- a/eng/pipelines/templates/stages/archetype-sdk-tests.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tests.yml
@@ -45,6 +45,8 @@ parameters:
       Canary:
         SubscriptionConfiguration: $(sub-config-azure-cloud-test-resources)
         Location: 'centraluseuap'
+        MatrixFilters:
+          - EnableForCanary=true
       UsGov:
         SubscriptionConfiguration: $(sub-config-gov-test-resources)
       China:
@@ -56,6 +58,7 @@ parameters:
         Path: eng/pipelines/templates/stages/platform-matrix.json
         Selection: sparse
         GenerateVMJobs: true
+        GenerateContainerJobs: true
   - name: AdditionalMatrixConfigs
     type: object
     default: []
