--- a/sdk/dns/arm-dns/tsconfig.json
+++ b/sdk/dns/arm-dns/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "preserveConstEnums": true,
     "lib": ["es6", "dom"],
     "declaration": true,
     "outDir": "./esm",
