--- a/eng/common/pipelines/templates/steps/daily-dev-build-variable.yml
+++ b/eng/common/pipelines/templates/steps/daily-dev-build-variable.yml
@@ -18,7 +18,7 @@ steps:
     Write-Host "Starting state:"
     Write-Host "  Build.Reason variable is: $(Build.Reason)"
     Write-Host "  System.TeamProject is: $(System.TeamProject)"
-    Write-Host "  SetDevVersion is: $(SetDevVersion)"
+    Write-Host "  SetDevVersion is: $($env:SetDevVersion)"
     $setDailyDevBuild = "false"
     if (('$(Build.Reason)' -in 'Schedule', 'IndividualCI') -and ('$(System.TeamProject)' -eq 'internal')) {
       $setDailyDevBuild = "true"
