--- a/sdk/communication/communication-sip-routing/package.json
+++ b/sdk/communication/communication-sip-routing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/communication-sip-routing",
-  "version": "1.0.0-alpha.20210608.1",
+  "version": "1.0.0-alpha.20210610.1",
   "description": "SDK for Azure Communication which faciliates the SIP routing configuration.",
   "sdk-type": "client",
   "main": "dist/index.js",
@@ -18,7 +18,15 @@
       }
     ]
   },
-  "types": "types/communication-sip-routing.d.ts",
+
+  "types": "types/latest/communication-sip-routing.d.ts",
+  "typesVersions": {
+    "<3.6": {
+      "*": [
+        "types/3.1/communication-sip-routing.d.ts"
+      ]
+    }
+  },
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
     "build:browser": "tsc -p . && cross-env ONLY_BROWSER=true rollup -c 2>&1",
