--- a/sdk/iotspaces/arm-iotspaces/package.json
+++ b/sdk/iotspaces/arm-iotspaces/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@azure/arm-iotspaces",
   "author": "Microsoft Corporation",
-  "description": "IoTSpacesClient Library with typescript type definitions for node.js and browser.",
-  "version": "1.1.0",
+  "description": "A generated SDK for IoTSpacesClient.",
+  "version": "1.0.0-beta.1",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
-    "@azure/ms-rest-azure-js": "^1.1.0",
-    "@azure/ms-rest-js": "^1.1.0",
+    "@azure/core-lro": "^1.0.5",
+    "@azure/core-paging": "^1.1.1",
+    "@azure/core-client": "^1.1.2",
+    "@azure/core-rest-pipeline": "1.0.0-beta.2",
     "tslib": "^1.9.3"
   },
   "keywords": [
@@ -16,22 +21,29 @@
     "isomorphic"
   ],
   "license": "MIT",
-  "main": "./dist/arm-iotspaces.js",
-  "module": "./esm/ioTSpacesClient.js",
-  "types": "./esm/ioTSpacesClient.d.ts",
+  "main": "./dist/index.js",
+  "module": "./esm/index.js",
+  "types": "./esm/index.d.ts",
   "devDependencies": {
-    "typescript": "^3.1.1",
-    "rollup": "^0.66.2",
+    "@microsoft/api-extractor": "7.9.10",
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-multi-entry": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "mkdirp": "^1.0.4",
+    "rollup": "^1.16.3",
+    "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "typescript": "^3.1.1",
     "uglify-js": "^3.4.9"
   },
-  "homepage": "https://github.com/azure/azure-sdk-for-js/tree/master/sdk/iotspaces/arm-iotspaces",
+  "homepage": "https://github.com/Azure/azure-sdk-for-js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/azure/azure-sdk-for-js.git"
+    "url": "https://github.com/Azure/azure-sdk-for-js.git"
   },
   "bugs": {
-    "url": "https://github.com/azure/azure-sdk-for-js/issues"
+    "url": "https://github.com/Azure/azure-sdk-for-js/issues"
   },
   "files": [
     "dist/**/*.js",
@@ -43,13 +55,16 @@
     "esm/**/*.d.ts",
     "esm/**/*.d.ts.map",
     "src/**/*.ts",
+    "README.md",
     "rollup.config.js",
-    "tsconfig.json"
+    "tsconfig.json",
+    "review/*"
   ],
   "scripts": {
-    "build": "tsc && rollup -c rollup.config.js && npm run minify",
-    "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/arm-iotspaces.js.map'\" -o ./dist/arm-iotspaces.min.js ./dist/arm-iotspaces.js",
-    "prepack": "npm install && npm run build"
+    "build": "tsc && rollup -c rollup.config.js && npm run minify && mkdirp ./review &&  npm run extract-api",
+    "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
+    "prepack": "npm install && npm run build",
+    "extract-api": "api-extractor run --local"
   },
   "sideEffects": false,
   "autoPublish": true
